--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@zxing/library": "^0.21.3",
     "core-js": "^3.25.3",
     "firebase": "^11.0.1",
     "nuxt": "^2.15.8",
